--- a/lab/part1.html
+++ b/lab/part1.html
@@ -13,7 +13,16 @@ We'll work on this together as a class.
   </head>
   <body>
     <div class="header">Header</div>
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar">
+        <div class="search">
+            <div class="search-text">Search 1</div>
+            <input type = "text" class="search-input">
+        </div>
+        <div class="search">
+            <div class="search-text">Search 1</div>
+            <input type = "text" class="search-input">
+        </div>
+</div>
     <div id="map" class="map">Map</div>
   </body>
 </html>
